Fix captions alignment to close #18

--- a/assets/scss/base/_wp-align.scss
+++ b/assets/scss/base/_wp-align.scss
@@ -72,6 +72,7 @@ p {
 .aligncenter {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .aligncenter,
@@ -92,6 +93,7 @@ p {
     /*rtl:begin:ignore*/
     margin-right: $wp-align-image-horizontal-padding !important;
     float: left;
+    text-align: left;
     clear: left;
     /*rtl:end:ignore*/
 }
@@ -100,6 +102,7 @@ p {
     /*rtl:begin:ignore*/
     margin-left: $wp-align-image-horizontal-padding !important;
     float: right;
+    text-align: right;
     clear: right;
     /*rtl:end:ignore*/
 }
