--- a/editor-style.css
+++ b/editor-style.css
@@ -3892,7 +3892,8 @@ p .alignnone {
 
 .aligncenter {
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  text-align: center; }
 
 .entry-content .aligncenter + p, .entry-content
 .alignnone + p {
@@ -3906,6 +3907,7 @@ p .alignnone {
   /*rtl:begin:ignore*/
   margin-right: 2rem !important;
   float: left;
+  text-align: left;
   clear: left;
   /*rtl:end:ignore*/ }
 
@@ -3913,6 +3915,7 @@ p .alignnone {
   /*rtl:begin:ignore*/
   margin-left: 2rem !important;
   float: right;
+  text-align: right;
   clear: right;
   /*rtl:end:ignore*/ }
 
